[gd_scene load_steps=3 format=2]

[ext_resource path="res://Resources/HUD/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://projecrthemev1.tres" type="Theme" id=2]

[node name="PauseMenu" type="CanvasLayer"]
pause_mode = 2
follow_viewport_enable = true
script = ExtResource( 1 )

[node name="Pause" type="Control" parent="."]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="Pause"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.392157 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Resume" type="Button" parent="Pause"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -42.0
margin_right = 40.0
margin_bottom = -22.0
theme = ExtResource( 2 )
text = "Resume"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Options" type="Button" parent="Pause"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -10.0
margin_right = 40.0
margin_bottom = 10.0
rect_pivot_offset = Vector2( 24, 8 )
theme = ExtResource( 2 )
text = "Options"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Quit" type="Button" parent="Pause"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = 22.0
margin_right = 40.0
margin_bottom = 42.0
theme = ExtResource( 2 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Data" type="Control" parent="Pause"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -32.0
margin_top = 24.0
margin_right = -32.0
margin_bottom = 24.0

[node name="Save" type="Button" parent="Pause/Data"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -24.0
margin_top = -16.0
margin_right = 24.0
margin_bottom = 4.0
rect_pivot_offset = Vector2( 24, 8 )
text = "Save"

[node name="Load" type="Button" parent="Pause/Data"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -24.0
margin_top = 8.0
margin_right = 24.0
margin_bottom = 28.0
rect_pivot_offset = Vector2( 24, 8 )
text = "Load"

[connection signal="pressed" from="Pause/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Pause/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Pause/Data/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="Pause/Data/Load" to="." method="_on_Load_pressed"]
